# particle-sim

./: CMakeLists.txt
src/: main.cpp  particle.cpp  particle.hpp  setup.h  vectors.cpp  vectors.hpp
